Feat: web push notifications, profiles, chat edits, local-dev tooling - Add notification-service (Kafka consumer, Web Push/VAPID, subscriptions, JWT user id). Extend shared-module with MessageCreatedEventV1 (and related payloads) from chat-service. Publish message-created events from chat-service (Kafka producer) for downstream push. Profile/cover images (user-service: ProfileImage entity, storage, APIs). Edit and delete messages (REST + WS), including captions on attachment/mixed messages. Storage/config for uploads and chat attachment paths (compose, chat-service.yml). docker-compose.dev.yml, local-development.env.example, run/start/stop/status scripts (PowerShell).